Fix typos, add background about GPU

--- a/similarTrueNewsRecommender.ipynb
+++ b/similarTrueNewsRecommender.ipynb
@@ -650,10 +650,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We apply this function and further create a dictionary, measuring how much certain words polarize in terms of frequency. With that we mean whether a certain term apears more often in one type of news than in the other. Looking at pure frequencies, we just subtract the number of times it appears in true news from the number for fake news. Negative values then mean that the term is more frequent in true news and positive values show that it appears more often in fake news. "
+    "We apply this function and further create a dictionary, measuring how much certain words polarize in terms of frequency. With that we mean whether a certain term appears more often in one type of news than in the other. Looking at pure frequencies, we subtract the number of times it appears in true news from the number for fake news. Negative values then mean that the term is more frequent in true news and positive values show that it appears more often in fake news. "
    ]
   },
   {
@@ -1104,10 +1105,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll train the model to identify fn or tn based on a Naive Bayes Classifier. Thgis is altogether a very simple, very straightforward approach."
+    "We'll train the model to identify fn or tn based on a Naive Bayes Classifier. This is altogether a very simple, very straight-forward approach."
    ]
   },
   {
@@ -1139,10 +1141,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets check, how well the model performs the recomendation task. For this we will use the Mean Average Precission at k - with k being 5, as the number of articles we want recommended. We assume the test dataset to be a complete collection of the news of the day, from which we want to recommend further relevant articles. "
+    "Now lets check, how well the model performs the recomendation task. For this we will use the Mean Average Precision at k - with k being 5, as the number of articles we want as recommended. We assume the test dataset to be a complete collection of the news of the day, from which we want to recommend further relevant articles. "
    ]
   },
   {
@@ -1192,10 +1195,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculating the mean precission at k (Code taken from ml_metrics - the package would not install)"
+    "Calculating the mean precision at k (Code taken from ml_metrics - the package would not install)"
    ]
   },
   {
@@ -1259,10 +1263,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see which words are typically used in one kind of news, we calculated a subversion of the IDF for each term but based only on the appearance in the opposite class. So meaning that for a term that e.g. appeared in a true news article we considered only all fake news articles plus the one tn article we took as a base (So we imagined it being part of the fn corpus and checked, whether the term distinguishes it). We further checked for the same term what ist respective IDF score would be for a corpus of its original news type. If the difference between those two was 0.5 or more (in favor of the opposite corpus), we considered it to be a somewhat good indicator for its specific news type. Note, that we only included terms that appear in more than 10 documents in the respective news category. "
+    "To see which words are typically used in one kind of news, we calculated a subversion of the IDF for each term but based only on the appearance in the opposite class. So meaning that for a term that e.g. appeared in a true news article we considered only all fake news articles plus the one tn article we took as a base (So we imagined it being part of the fn corpus and checked, whether the term distinguishes it). We further checked for the same term, what its respective IDF score would be for a corpus of its original news type. If the difference between those two were 0.5 or more (in favor of the opposite corpus), we considered it to be a somewhat good indicator for its specific news type. Note, that we only included terms, that appear in more than 10 documents in the respective news category. "
    ]
   },
   {
@@ -1357,10 +1362,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on that we defined a function that factors in the term frequency for selecting whether or not an item is to be considered relevant, if its IDF is lower (tfidf - with the above stated particular calculation of idf). We did so, as the pure idf could not account for words such as said, that might appear in both categories (as seen above - hence the \"low\" IDF of 0.7 in the fn dict - it is btw not contained in the tn dict, so the discrimination works), but are used much more frequently in one category. In that way, they are factored in, if they are used multiple times in a document, but left out, if they are not used enough times, and thereby resemble the pattern of the opposite category. For this purpose it seemed adequate to only use a low threshhold for tfidf. "
+    "Based on that we defined a function that factors in the term frequency for selecting whether or not an item is to be considered relevant, if its IDF is lower (tfidf - with the above stated particular calculation of idf). We did so, as the pure idf could not account for words such as said, that might appear in both categories (as seen above - hence the \"low\" IDF of 0.7 in the fn dict - it is not contained in the tn dict, so the discrimination works), but are used much more frequently in one category. In that way, they are factored in, if they are used multiple times in a document, but left out, if they are not used enough times, and thereby resemble the pattern of the opposite category. For this purpose it seemed adequate to only use a low threshhold for tfidf. "
    ]
   },
   {
@@ -30826,6 +30832,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we had access to an Nvidia RTX2080 Super, which is a CUDA compatible GPU, we managed to achieve a significantly faster runtime for the neural network trainings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -32023,7 +32037,7 @@
     "\n",
     "Therefore the article they read serves as the query.\n",
     "\n",
-    "For evaluation we use the Mean Average Precission at k. "
+    "For evaluation we use the Mean Average Precision at k. "
    ]
   },
   {
@@ -32243,7 +32257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly we calculate the Mean Average Precission at k for the recommended articles against those that should ghave been recommended. The MAPK function itself was already defined for the baseline model. "
+    "Lastly we calculate the Mean Average Precission at k for the recommended articles against those that should have been recommended. The MAPK function itself was already defined for the baseline model. "
    ]
   },
   {
