add function to display recommended articles

--- a/similarTrueNewsRecommender.ipynb
+++ b/similarTrueNewsRecommender.ipynb
@@ -32299,6 +32299,86 @@
    "source": [
     "The downsides to it are the large amount of topics in the \"garbage category\" given out by BERTopic."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally. This is how it could look like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def article_recommender(article_read, dataset):\n",
+    "\n",
+    "    sim_matrix = cosine_similarity(topic_model.topic_embeddings_, topic_model.topic_embeddings_)\n",
+    "\n",
+    "    query = dataset.index[dataset['index'] == article_read][0]\n",
+    "    topic_id = get_topic_id(query, dataset)\n",
+    "    articles_with_same_topic = filter_artciles_with_same_topic(topic_id, query, dataset)\n",
+    "    predictions = predict_label(articles_with_same_topic).squeeze(1)\n",
+    "    recommended_articles = filter_articles_based_on_predictions(articles_with_same_topic, predictions, 5)\n",
+    "    sim_counter = 0\n",
+    "    while len(recommended_articles) < 5:\n",
+    "        sim_counter += 1\n",
+    "        top_array = sim_matrix[topic_id]\n",
+    "        next_large = np.sort(top_array)\n",
+    "        next_value = next_large[len(next_large)-sim_counter]\n",
+    "        val_index = np.where(top_array == next_value)[0][0]-1\n",
+    "        articles_other_topic = filter_artciles_with_similar_topic(val_index, query, dataset)\n",
+    "        predictions_other = predict_label(articles_other_topic).squeeze(1)\n",
+    "        additional_articles = filter_articles_based_on_predictions(articles_other_topic, predictions_other, 5-(len(recommended_articles)))\n",
+    "        recommended_articles = recommended_articles + additional_articles\n",
+    "\n",
+    "    title_list = []\n",
+    "    for i in range(5):\n",
+    "        title_list.append(dataset[dataset['index'] == recommended_articles[i]][\"title\"].values[0])\n",
+    "\n",
+    "    print(f'You were reading the article \"{dataset.iloc[query][\"title\"]}\"')\n",
+    "    if dataset.loc[query][\"label\"] == 0:\n",
+    "        print(\"The contents of the article are contested.\")\n",
+    "    print(\"Here are some other articles, you might be interested in:\")\n",
+    "    print(title_list[0])\n",
+    "    print(title_list[1])\n",
+    "    print(title_list[2])\n",
+    "    print(title_list[3])\n",
+    "    print(title_list[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You were reading the article \"Obama challenges Communist-led Cuba with call for democracy \n",
+      "The contents of the article are contested.Here are some other articles, you might be interested in: \n",
+      "Myriad of ways the CIA tried (and failed) to assassinate Fidel Castro\n",
+      "PressTV-Brazil football legend Carlos Alberto laid to rest \n",
+      " Watch Out NRA: President Obama Is Coming For You\n",
+      "Undercover Video Exposes Obama’s Plan to Make American “Gun Laws” More Like Britain – TruthFeed\n",
+      " Cops SLAM Gun-Crazy GOP Candidate Who Said They Should Be Shot\n"
+     ]
+    }
+   ],
+   "source": [
+    "article_recommender(64966, eval_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
